src/objects/TS_Email_Blocking__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Domains__c</fullName>
        <inlineHelpText>Ex. domain.com (Multiple domains should be comma separated.)</inlineHelpText>
        <label>Allowed Domains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>TS_Email Blocking</label>
</CustomObject>